--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,6 +4,6 @@
     <h1>Index</h1>
     <a href="{{url_for('login')}}">/Login</a> <br/>
     <a href="{{url_for('register')}}">/Register</a> <br/>
-    <a href="{{url_for('main')}}">/Main</a> <br/>
+    <a href="{{url_for('shop')}}">/Shop</a> <br/>
     <a href="{{url_for('logout')}}">/Logout</a> <br/>
 {% endblock content %}
