--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% import "bootstrap_wtf.html" as wtf %}
+{% import "bootstrap/wtf.html" as wtf %}
 
 {% block content %}
     <div class="container">
@@ -11,14 +11,7 @@
             {% endif %}
         {% endwith %}
 
-        <form action="{{url_for('login')}}" method="post">
-            {{ wtf.form_field(form.email) }}
-            {{ wtf.form_field(form.password) }}
-            <div class="d-flex flex-row">
-                {{ form.remember_me(class="form-check") }} {{ form.remember_me.label(class="col-form-label mb-1") }}
-            </div> 
-            {{ form.submit(class="form-control btn btn-primary") }}
-        </form>
+        {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}
     </div>
     <div class="container">
         New here? <a href="{{url_for('register')}}">Register</a> now!
