--- a/app/templates/add_item.html
+++ b/app/templates/add_item.html
@@ -1,8 +1,52 @@
 {% extends "base.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
+
+{% block styles %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" />
+{% endblock styles %}
 
 {% block content %}
-    <div class="container">
-        {{ wtf.quick_form(form, novalidate=True, button_map={'submit': 'primary'}) }}
-    </div>
+<div class="container">
+    <h1>Add Item</h1>
+    <form action="{{url_for('add_item')}}" method='post' novalidate>
+        {% with messages=get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                <p class="errors">{{ message }}</p>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+
+        {{ form.hidden_tag() }}
+
+        {% if form.item_name.errors %}
+            <ul class="errors">
+            {% for error in form.item_name.errors %}
+                <li>{{ error }}</li>
+            {% endfor %}
+            </ul>
+        {% endif %}
+        {{ form.item_name(placeholder="Item Name") }}
+
+        {% if form.item_description.errors %}
+            <ul class="errors">
+            {% for error in form.item_description.errors %}
+                <li>{{ error }}</li>
+            {% endfor %}
+            </ul>
+        {% endif %}
+        {{ form.item_description(placeholder="Item Description") }}
+
+        {% if form.price.errors %}
+            <ul class="errors">
+            {% for error in form.price.errors %}
+                <li>{{ error }}</li>
+            {% endfor %}
+            </ul>
+        {% endif %}
+        {{ form.price(placeholder="Price") }}
+
+        {{ form.img_url(placeholder="Item Image") }}
+        {{ form.submit }}
+    </form>
+</div>
 {% endblock content %}
