--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,13 +3,19 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        {% block title %}
         <title>E-Commerce Website</title>
+        {% endblock title %}
+        
+        {% block styles %}
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
             rel="stylesheet"
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
             crossorigin="anonymous"
         />
+        {% endblock styles %}
     </head>
     <body>
         <script
