--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,19 +1,49 @@
 {% extends "base.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
+
+{% block styles %}
+<link rel="stylesheet" href="static/css/styles.css" />
+{% endblock styles %}
 
 {% block content %}
-    <div class="container">
+<div class="container">
+    <h1>Welcome Back!</h1>
+    <p>Please login to your account</p>
+    <form action="{{url_for('login')}}" method='post' novalidate>
         {% with messages=get_flashed_messages() %}
             {% if messages %}
                 {% for message in messages %}
-                <p style="color: red;">{{message}}</p>
+                <p class="errors">{{ message }}</p>
                 {% endfor %}
             {% endif %}
         {% endwith %}
 
-        {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}
-    </div>
-    <div class="container">
-        New here? <a href="{{url_for('register')}}">Register</a> now!
-    </div>
+        {{ form.hidden_tag() }}
+
+        {% if form.email.errors %}
+            <ul class="errors">
+            {% for error in form.email.errors %}
+                <li>{{ error }}</li>
+            {% endfor %}
+            </ul>
+        {% endif %}
+        {{ form.email(placeholder="Email") }}
+
+        {% if form.password.errors %}
+            <ul class="errors">
+            {% for error in form.password.errors %}
+                <li>{{ error }}</li>
+            {% endfor %}
+            </ul>
+        {% endif %}
+        {{ form.password(placeholder="Password") }}
+
+        <div class="checkbox-container">
+            {{ form.remember_me }}
+            {{ form.remember_me.label }}
+        </div>
+        <!-- <a href="#">Forgot Password?</a> -->
+        {{ form.submit }}
+    </form>
+    <p>New User? <a href="{{url_for('register')}}">Register</a></p>
+</div>
 {% endblock content %}
