--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,8 +2,12 @@
 
 {% block content %}
     <h1>Index</h1>
+    {% if not current_user.is_authenticated %}
     <a href="{{url_for('login')}}">/Login</a> <br/>
     <a href="{{url_for('register')}}">/Register</a> <br/>
+    {% endif %}
     <a href="{{url_for('shop')}}">/Shop</a> <br/>
+    {% if current_user.is_authenticated %}
     <a href="{{url_for('logout')}}">/Logout</a> <br/>
-{% endblock content %}
+    {% endif %}
+    {% endblock content %}
